Fixed footer css spacing

--- a/static/css/sass.scss
+++ b/static/css/sass.scss
@@ -289,7 +289,7 @@ footer h5 {
         flex-wrap: wrap;
     }
     footer h5 {
-        margin-top: 5px;
+        margin-top: 375px;
         margin-bottom: 100px;
     }
 }
