--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -413,7 +413,7 @@ footer h5 {
   }
 
   footer h5 {
-    margin-top: 5px;
+    margin-top: 375px;
     margin-bottom: 100px;
   }
 }
